--- a/tasks/two-step/experiment.html
+++ b/tasks/two-step/experiment.html
@@ -21,6 +21,8 @@
   <script src="../../lib/jspsych-7.3.1/plugins/plugin-fullscreen.js"></script>
   <script src="../../lib/jspsych-7.3.1/plugins/plugin-call-function.js"></script>
   <script src="../../lib/jspsych-7.3.1/plugins/plugin-html-keyboard-response.js"></script>
+  <script src="../../lib/jspsych-7.3.1/plugins/plugin-image-button-response.js"></script>
+
 
   <!-- Load experiment -->
   <!-- Note: the order matters for the following imports -->
