--- a/tasks/two-step/experiment.html
+++ b/tasks/two-step/experiment.html
@@ -26,6 +26,8 @@
 
   <!-- Load experiment -->
   <!-- Note: the order matters for the following imports -->
+  <!--<script src="./aliens-manifest.json" type="text/javascript"></script> -->
+  <script src="./js/load_data.js" type="text/javascript"></script>
   <script src="./js/two-step-drifts.js" type="text/javascript"></script>
   <script src="./js/two-step-experiment.js" type="text/javascript"></script>
   <script src="./js/two-step-instructions.js" type="text/javascript"></script>
@@ -37,7 +39,7 @@
 </head>
 <body></body>
 <script>
-
+  console.log("main...")
   // Define image preloading.
   var PRELOAD = {
     type: jsPsychPreload,
