--- a/tasks/two-step/experiment.html
+++ b/tasks/two-step/experiment.html
@@ -27,7 +27,6 @@
   <!-- Load experiment -->
   <!-- Note: the order matters for the following imports -->
   <!--<script src="./aliens-manifest.json" type="text/javascript"></script> -->
-  <script src="./js/load_data.js" type="text/javascript"></script>
   <script src="./js/two-step-drifts.js" type="text/javascript"></script>
   <script src="./js/two-step-experiment.js" type="text/javascript"></script>
   <script src="./js/two-step-instructions.js" type="text/javascript"></script>
@@ -39,38 +38,73 @@
 </head>
 <body></body>
 <script>
-  console.log("main...")
-  // Define image preloading.
-  var PRELOAD = {
-    type: jsPsychPreload,
-    images: preload_images,
-    message: 'Loading images. This may take a moment depending on your internet connection.',
-    error_message: '<p>The experiment failed to load. Please try restarting your browser.</p><p>If this error persists after 2-3 tries, please contact the experimenter.</p>',
-    continue_after_error: false,
-    show_progress_bar: true,
-    max_load_time: 30000
+  // First get last session data for subject by guessing name of last data file and loading it
+  // pull vars embedded in the redcap generated url
+  var record_id = String(jsPsych.data.getURLVariable('record_id'));
+  var instance = parseInt(jsPsych.data.getURLVariable('instance'));
+  var prev_instance = String(instance - 1);
+  var event_name = String(jsPsych.data.getURLVariable('event_name')).split('_')[0];
+  var project = String(jsPsych.data.getURLVariable('project'));
+
+  // force record_id to 3 chars
+  while (record_id.length < 3){
+    record_id = '0' + record_id
+  }
+  // and session number to 2 chars
+  while (instance.length < 2){
+    instance = '0' + prev_instance
   }
 
-  // Define experiment fullscreen.
-  var FULLSCREEN = {
-    type: jsPsychFullscreen,
-    fullscreen_mode: true
+  const manifest = fetch('manifest.json')
+    .then((response) => response.json())
+    .then((record) => {
+      return record
+    });
+
+  const experiment = async (record_id) => {
+
+    const manifested = await manifest;
+    const record = manifested[record_id];
+    console.log('fuckity: ', manifested);
+    let last_drift = record['last_drift'];
+    console.log('last drift: ', last_drift);
+    let drift_ix = record['drift_ix'];
+    console.log('drift ix: ', drift_ix);
+
+    // Define image preloading.
+    var PRELOAD = {
+      type: jsPsychPreload,
+      images: preload_images,
+      message: 'Loading images. This may take a moment depending on your internet connection.',
+      error_message: '<p>The experiment failed to load. Please try restarting your browser.</p><p>If this error persists after 2-3 tries, please contact the experimenter.</p>',
+      continue_after_error: false,
+      show_progress_bar: true,
+      max_load_time: 30000
+    }
+
+    // Define experiment fullscreen.
+    var FULLSCREEN = {
+      type: jsPsychFullscreen,
+      fullscreen_mode: true
+    }
+
+    // Initialize timeline.
+    var timeline = [];
+    timeline = timeline.concat(PRELOAD);
+    timeline = timeline.concat(FULLSCREEN);
+    timeline = timeline.concat(INSTRUCTIONS_SKIP);
+    timeline = timeline.concat(INSTRUCTIONS);
+    timeline = timeline.concat(READY_01);
+    timeline = timeline.concat(TWO_STEP_TASK.slice(last_drift,last_drift+100));
+    timeline = timeline.concat(READY_02);
+    timeline = timeline.concat(TWO_STEP_TASK.slice(last_drift+100,last_drift+201));
+    timeline = timeline.concat(FINISHED);
+
+    // Execute timeline.
+    jsPsych.run(timeline);
   }
-
-  // Initialize timeline.
-  var timeline = [];
-  timeline = timeline.concat(PRELOAD);
-  timeline = timeline.concat(FULLSCREEN);
-  timeline = timeline.concat(INSTRUCTIONS_SKIP);
-  timeline = timeline.concat(INSTRUCTIONS);
-  timeline = timeline.concat(READY_01);
-  timeline = timeline.concat(TWO_STEP_TASK.slice(0,100));
-  timeline = timeline.concat(READY_02);
-  timeline = timeline.concat(TWO_STEP_TASK.slice(100,201));
-  timeline = timeline.concat(FINISHED);
-
-  // Execute timeline.
-  jsPsych.run(timeline);
+  console.log("using record: ", record_id);
+  experiment(record_id);
 
 </script>
 </html>
